--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,5 +1,5 @@
 - name: GitHub
-  url: http://github.com/phlow
+  url: http://github.com/centromedicojuanpabloii
   class: icon-github
   title: Code und mehr...
 
@@ -24,7 +24,7 @@
   title: "YouTube Google+"
 
 # - name: Facebook
-#   url: http://www.facebook.com/
+#   url: http://www.facebook.com/centromedicotilaran
 #   class: icon-facebook
 #   title: ""
 
@@ -34,7 +34,7 @@
 #   title: ""
 
 # - name: Instagram
-#   url: http://instagram.com/
+#   url: http://instagram.com/centromedico_tilaran
 #   class: icon-instagram
 #   title: ""
 
