--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,24 +1,24 @@
-info_website: "About This Site"
-archive: "Archive"
-blog_archive: "Blog Archive"
+info_website: "Acerca de este Blog"
+archive: "Archivo"
+blog_archive: "Posts Archivados"
 blog: "Blog"
 comments_headline: "Dialogue &amp; Discussion"
-more: "More ›"
-more_articles: "More Articles"
-navigation_title: "Navigation"
-new_blog_entries: "New Blog Articles"
-next: "Next"
-next_posts: "Next Posts"
-previous: "Previous"
-previous_posts: "Previous Posts"
-read: "Read"
-read_more: "Read More&nbsp;›"
+more: "Más ›"
+more_articles: "Más Artículos"
+navigation_title: "Navegación"
+new_blog_entries: "Articulos Recientes"
+next: "Siguiente"
+next_posts: "Siguiente Artículo"
+previous: "Anterior"
+previous_posts: "Artículos Anteriores"
+read: "Lea"
+read_more: "Lea Más&nbsp;›"
 if_you_are_not_redirected_automatically: "If you are not redirected automatically,"
-click_here: "click here"
-next_post_in: "Next Post in"
-previous_post_in: "Previous Post in"
-breadcrumb_start: "Start"
-edit: "Edit"
-this_content_is_open_source: "This content is open source."
-help_improve_it: "Help improve it"
-enter_search_term: "Enter search term and hit enter"
+click_here: "click aquí"
+next_post_in: "Siguiente Post en"
+previous_post_in: "Post Anterior en"
+breadcrumb_start: "Inicio"
+edit: "Editar"
+this_content_is_open_source: "Este contenido es open source."
+help_improve_it: "Ayuda a Mejorarlo"
+enter_search_term: "Ingresa el término de búsqueda y dale enter"
