--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -74,7 +74,7 @@
   url: "/contact/"
   side: right
 
-  - title: PSICOLOGÍA
+  - title: PSICOLOGÍA2
   url: "/documentation/"
   side: left
   dropdown:
